# AntColonyEngine

./: CMakeLists.txt  README.md  run.sh
include/: ant.h  colony.h  engine.h  map.h  tile.h
src/: ant.cpp  colony.cpp  engine.cpp  main.cpp  map.cpp  tile.cpp
